added html tag elements to cart.html (header,div for overlay,nav) and set css default in css file

--- a/Felix_Atsu_Ackuayi_ShoppinCart_201105/cart.html
+++ b/Felix_Atsu_Ackuayi_ShoppinCart_201105/cart.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8">
     <title>Shopping Cart</title>
 </head>
+<link rel="stylesheet" href="styles.css">
 <body>
+
+   <!--Header Section-->
+       <header>
+      <!--1. div.overlay-->
+       <div class="overlay"></div>
+        <!--2. nav-->
+        <nav><!--3-->
+            <h2>SHOP</h2><!--4-->
+            <ul><!--5 Unordered List-->
+                <li><a href="index.html">Home</a></li><!--6. referencing the index html-->
+                <li><a href="#">About</a></li><!--7.-->
+                <li><a href="cart.html"><ion-icon name="basket"></ion-icon> Cart<span>0</span></a></li><!--8.Redirecting to same page-->
+            </ul><!--5 END Unordered List-->
+        </nav>
+       </header>
+   <!--End of Header Section-->
+
 
 </body>
 </html>
