functions to store a product in localStorage of the browser and getting count of them and display in cart buttn

--- a/Felix_Atsu_Ackuayi_ShoppinCart_201105/cart.html
+++ b/Felix_Atsu_Ackuayi_ShoppinCart_201105/cart.html
@@ -17,11 +17,53 @@
             <ul><!--5 Unordered List-->
                 <li><a href="index.html">Home</a></li><!--6. referencing the index html-->
                 <li><a href="#">About</a></li><!--7.-->
-                <li><a href="cart.html"><ion-icon name="basket"></ion-icon> Cart<span>0</span></a></li><!--8.Redirecting to same page-->
+                <li class="cart"><a href="cart.html"><ion-icon name="basket"></ion-icon> Cart<span>0</span></a></li><!--8.Redirecting to same page-->
             </ul><!--5 END Unordered List-->
         </nav>
        </header>
    <!--End of Header Section-->
+
+   <!--CONTAINER -->
+       <div class="image">
+           <img src="images/footwear.jpg" alt="footwear">
+           <h3>Footwear</h3>
+           <h3>GHC 120</h3>
+           <a href="#" class="add-cart cart1">Add Cart</a>
+           <input type="hidden" value="15"/>
+
+       </div>
+
+      <div class="image">
+       <img src="images/jeansLady.jpg" alt="jeans">
+       <h3>Jeans</h3>
+       <h3>GHC 50</h3>
+       <a href="#" class="add-cart cart2">Add Cart</a>
+       <input type="hidden" value="20"/>
+
+       </div>
+
+   <div class="image">
+       <img src="images/ladieswear.jpg" alt="Ladies wear">
+       <h3>Ladies Wear</h3>
+       <h3>GHC 200</h3>
+       <a href="#" class="add-cart cart3">Add Cart</a>
+       <input type="hidden" value="15"/>
+   </div>
+
+   <div class="image">
+       <img src="images/swimmer.jpg" alt="swimming Costume">
+       <h3>Swimming</h3>
+       <h3>GHC 200</h3>
+       <a href="#" class="add-cart cart4">Add Cart</a>
+       <input type="hidden" value="15"/>
+
+   </div>
+
+
+
+
+
+   <!--END CONTAINER -->
 
 
 </body>
