--- a/Felix_Atsu_Ackuayi_ShoppinCart_201105/index.html
+++ b/Felix_Atsu_Ackuayi_ShoppinCart_201105/index.html
@@ -2,11 +2,77 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"><!--1-->
+    <!--<link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet"> &lt;!&ndash;3&ndash;&gt;-->
+    <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
+    <link rel="stylesheet" href="styles.css"><!--2-->
     <title>Shopping Cart</title>
+
 </head>
 <body>
 
-  <h1>My Home Page</h1>
+
+  <!--Header Section-->
+  <header>
+      <!--1. div.overlay-->
+      <div class="overlay"></div>
+      <!--2. nav-->
+      <nav><!--3-->
+          <h2>SHOP</h2><!--4-->
+          <ul><!--5 Unordered List-->
+              <li><a href="index.html">Home</a></li><!--6. referencing the index html-->
+              <li><a href="#">About</a></li><!--7.-->
+              <!--ionicons.com-->
+              <li class="cart"><a href="cart.html"><ion-icon name="basket"></ion-icon> Cart<span>0</span></a></li><!--8.Redirecting to same page-->
+          </ul><!--5 END Unordered List-->
+      </nav>
+  </header>
+  <!--End of Header Section-->
+
+  <div class="container">
+      <!--CONTAINER -->
+      <div class="image">
+          <img style=" " src="images/footwear.jpg " width="100px" height="200px" alt="footwear">
+          <h3>Footwear</h3>
+          <h3>GHC 120</h3>
+          <a href="#" class="add-cart cart1">Add Cart</a>
+
+
+      </div>
+
+      <div class="image">
+          <img src="images/jeansLady.jpg" width="100px" height="200px" alt="jeans">
+          <h3>Jeans</h3>
+          <h3>GHC 50</h3>
+          <a href="#" class="add-cart cart2">Add Cart</a>
+
+
+      </div>
+
+      <div class="image">
+          <img src="images/ladieswear.jpg" width="100px" height="200px"  alt="Ladies wear">
+          <h3>Ladies Wear</h3>
+          <h3>GHC 200</h3>
+          <a href="#" class="add-cart cart3">Add Cart</a>
+
+      </div>
+
+      <div class="image">
+          <img src="images/swimmer.jpg" width="100px" height="200px"  alt="swimming Costume">
+          <h3>Swimming</h3>
+          <h3>GHC 200</h3>
+          <a href="#" class="add-cart cart4">Add Cart</a>
+
+      </div>
+
+      <!--END CONTAINER -->
+
+  </div>
+
+  <script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
+
+  <!--<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>-->
+  <script src="main.js"></script>
 
 </body>
 </html>
