--- a/Felix_Atsu_Ackuayi_ShoppinCart_201105/cart.html
+++ b/Felix_Atsu_Ackuayi_ShoppinCart_201105/cart.html
@@ -2,68 +2,52 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"><!--1-->
+    <!--<link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet"> &lt;!&ndash;3&ndash;&gt;-->
+    <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
+    <link rel="stylesheet" href="styles.css"><!--2-->
     <title>Shopping Cart</title>
 </head>
-<link rel="stylesheet" href="styles.css">
+
 <body>
 
-   <!--Header Section-->
-       <header>
-      <!--1. div.overlay-->
-       <div class="overlay"></div>
-        <!--2. nav-->
-        <nav><!--3-->
-            <h2>SHOP</h2><!--4-->
-            <ul><!--5 Unordered List-->
-                <li><a href="index.html">Home</a></li><!--6. referencing the index html-->
-                <li><a href="#">About</a></li><!--7.-->
-                <li class="cart"><a href="cart.html"><ion-icon name="basket"></ion-icon> Cart<span>0</span></a></li><!--8.Redirecting to same page-->
-            </ul><!--5 END Unordered List-->
-        </nav>
-       </header>
-   <!--End of Header Section-->
+<!--Header Section-->
+<header>
+    <!--1. div.overlay-->
+    <div class="overlay"></div>
+    <!--2. nav-->
+    <nav><!--3-->
+        <h2>SHOP</h2><!--4-->
+        <ul><!--5 Unordered List-->
+            <li><a href="index.html">Home</a></li><!--6. referencing the index html-->
+            <li><a href="#">About</a></li><!--7.-->
+            <!--ionicons.com-->
+            <li class="cart"><a href="cart.html"><ion-icon name="basket"></ion-icon> Cart<span>0</span></a></li><!--8.Redirecting to same page-->
+        </ul><!--5 END Unordered List-->
+    </nav>
+</header>
+<!--End of Header Section-->
 
-   <!--CONTAINER -->
-       <div class="image">
-           <img src="images/footwear.jpg" alt="footwear">
-           <h3>Footwear</h3>
-           <h3>GHC 120</h3>
-           <a href="#" class="add-cart cart1">Add Cart</a>
-           <input type="hidden" value="15"/>
+ <div class="products-container">
+     <div class="product-header">
+         <h5 class="product-title">PRODUCT</h5>
+         <h5 class="price">PRICE</h5>
+         <h5 class="quantity">QUANTITY</h5>
+         <h5 class="total">TOTAL</h5>
+     </div>
+     <div class="products">
 
-       </div>
+     </div>
+ </div>
 
-      <div class="image">
-       <img src="images/jeansLady.jpg" alt="jeans">
-       <h3>Jeans</h3>
-       <h3>GHC 50</h3>
-       <a href="#" class="add-cart cart2">Add Cart</a>
-       <input type="hidden" value="20"/>
+<script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
 
-       </div>
+<!--<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>-->
+<script src="main.js"></script>
 
-   <div class="image">
-       <img src="images/ladieswear.jpg" alt="Ladies wear">
-       <h3>Ladies Wear</h3>
-       <h3>GHC 200</h3>
-       <a href="#" class="add-cart cart3">Add Cart</a>
-       <input type="hidden" value="15"/>
-   </div>
-
-   <div class="image">
-       <img src="images/swimmer.jpg" alt="swimming Costume">
-       <h3>Swimming</h3>
-       <h3>GHC 200</h3>
-       <a href="#" class="add-cart cart4">Add Cart</a>
-       <input type="hidden" value="15"/>
-
-   </div>
-
-
-
-
-
-   <!--END CONTAINER -->
+<!--<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>-->
 
 
 </body>
