--- a/Felix_Atsu_Ackuayi_ShoppinCart_201105/cart.html
+++ b/Felix_Atsu_Ackuayi_ShoppinCart_201105/cart.html
@@ -2,53 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
-
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"><!--1-->
-    <!--<link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet"> &lt;!&ndash;3&ndash;&gt;-->
-    <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
-    <link rel="stylesheet" href="styles.css"><!--2-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Shopping Cart</title>
 </head>
-
 <body>
+    <header>
+        <div class="overlay"></div>
+        <nav>
+            <h2>SHOP</h2>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li class="cart">
+                    <a href="cart.html">
+                        <ion-icon name="basket"></ion-icon>Cart<span>0</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-<!--Header Section-->
-<header>
-    <!--1. div.overlay-->
-    <div class="overlay"></div>
-    <!--2. nav-->
-    <nav><!--3-->
-        <h2>SHOP</h2><!--4-->
-        <ul><!--5 Unordered List-->
-            <li><a href="index.html">Home</a></li><!--6. referencing the index html-->
-            <li><a href="#">About</a></li><!--7.-->
-            <!--ionicons.com-->
-            <li class="cart"><a href="cart.html"><ion-icon name="basket"></ion-icon> Cart<span>0</span></a></li><!--8.Redirecting to same page-->
-        </ul><!--5 END Unordered List-->
-    </nav>
-</header>
-<!--End of Header Section-->
+    <div class="container-products">
+        <div class="product-header">
+            <h5 class="product-title">PRODUCT</h5>
+            <h5 class="price sm-hide">PRICE</h5>
+            <h5 class="quantity">QUANTITY</h5>
+            <h5 class="total">TOTAL</h5>
+        </div>
+        <div class="products">
 
- <div class="products-container">
-     <div class="product-header">
-         <h5 class="product-title">PRODUCT</h5>
-         <h5 class="price">PRICE</h5>
-         <h5 class="quantity">QUANTITY</h5>
-         <h5 class="total">TOTAL</h5>
-     </div>
-     <div class="products">
+        </div>
+    </div>
 
-     </div>
- </div>
-
-<script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
-
-<!--<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>-->
-<script src="main.js"></script>
-
-<!--<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>-->
-
+    <script src="main.js"></script>
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
 </body>
 </html>
